# social-auth-app-django-newbie

./: .editorconfig  .envrc.sample  .gitignore  Makefile  README.md  manage.py  pyproject.toml
account/: urls.py  views.py
account/templates/: index.html
app/config/: settings.py  urls.py
config/: middleware.py  settings.py  urls.py
